# tesi_mag_code

./: .gitignore  README.md
plugin_attach/: CMakeLists.txt  concatenaria_force.cc  concatenaria_force.hh  launch_2_drones_and_plugin.sh
plugin_forces/: concatenaria_force.cc  concatenaria_force.hh  launch_2_drones_and_plugin  launch_2_drones_and_plugin.sh
